# nix-templates

./: .editorconfig  .gitignore  Dockerfile  README.md  flake.nix
bash/: flake.nix
cc/: .gitignore  flake.nix
cpp/: .gitignore  flake.nix
haskell/: .gitignore  flake.nix
hdl/: .envrc  flake.nix
julia/: .gitignore  flake.nix
jupyter/: .gitignore  flake.nix  requirements.txt
modern-c/: .gitignore  flake.nix
nix/: flake.nix
notes/: flake.nix
org/: .gitignore  flake.nix
python/: .gitignore  .pre-commit-config.yaml  flake.nix  pyproject.toml  requirements.txt
python-devenv/: devenv.nix  flake.nix
python-devenv/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
rust/: flake.nix  rust-toolchain.toml
rust-embedded/: .gitignore  flake.nix  rust-toolchain.toml
rust-gui/: .gitignore  clippy.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
rust-toolchain/: flake.nix
rust-wasm/: flake.nix
rust-web/: flake.nix
typescript/: .gitignore  flake.nix
zig/: .gitignore  flake.nix
